[tool.poetry]
name = "drugex-plus-r"
version = "0.1.0"
description = "A simplified version of DrugEx by Xuhan Liu to facilitate incorporation of retrosynthesis engines in de novo drug design"
authors = ["naisuu <julius.cathalina@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7, <3.8"
jupyter = "^1.0.0"
matplotlib = "^3.4.2"
pandas = "^1.0.0"
tqdm = "^4.62.0"
scikit-learn = "^0.24.2"
torch = {version = "^1.9.0", python = "^3.7", platform = "linux"}
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
invoke = "^1.6.0"
pytest = "^6.2.4"
pytest-black = "^0.3.12"
mypy = "^0.910"
pylint = "^2.9.6"
pytest-mock = "^3.6.1"
pytest-cov = "^2.12.1"
sphinx = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
